# ebpf-tracer

./: .gitmodules  README.md  meson.build  meson_options.txt
.github/workflows/: codeql.yml
src/: .gitignore  controller.c  controller.h  loader.c  loader.h  main.c  meson.build  syscall_table.c  syscall_table.h
src/syscalls/: default.c  dup_common.c  dup_common.h  fd_cache.c  fd_cache.h  open_common.c  open_common.h  openat.c  read_common.c  read_common.h  syscalls.h  utils.h  write_common.c  write_common.h
src/syscalls/handlers/: consts.h  handle_close.c  handle_close.h  handle_dup.c  handle_dup.h  handle_dup2.c  handle_dup2.h  handle_dup3.c  handle_dup3.h  handle_fcntl.c  handle_fcntl.h  handle_link.c  handle_link.h  handle_linkat.c  handle_linkat.h  handle_mkdir.c  handle_mkdir.h  handle_mkdirat.c  handle_mkdirat.h  handle_open.c  handle_open.h  handle_openat.c  handle_openat.h  handle_openat2.c  handle_openat2.h  handle_pread.c  handle_pread.h  handle_pread64.c  handle_pread64.h  handle_preadv.c  handle_preadv.h  handle_pwrite64.c  handle_pwrite64.h  handle_pwritev.c  handle_pwritev.h  handle_read.c  handle_read.h  handle_readv.c  handle_readv.h  handle_rmdir.c  (+13 more)
src/utils/: logger.c  logger.h  path_utils.c  path_utils.h  remote_bytes.c  remote_bytes.h
test/: meson.build  test.c
